--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "moment": "^2.24.0",
     "ramda": "^0.27.0",
     "react": "^16.8.0",
     "react-bootstrap": "^1.0.0",
