--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-select": "^3.1.0",
     "react-tabs": "^3.1.0",
     "react-toastify": "^5.5.0",
     "redux": "^3.7.2",
