--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "redux-promise": "^0.5.3",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "1.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
