--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "socket.io-client": "1.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
